--- a/css/main_style.css
+++ b/css/main_style.css
@@ -1,5 +1,5 @@
-@import {
-	url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+@import { 
+	url('https://fonts.googleapis.com/css?family=Open+Sans:700|Raleway');
 }
 
 * {
@@ -13,7 +13,7 @@
 	position: relative;
 	font-family: 'Open Sans', sans-serif;;
 	font-size: 14px;
-	color: rgba(255, 255, 255, 0.69);
+	color: rgba(255, 255, 255);
 }
 .left {
 	margin-left: 150px;
@@ -34,6 +34,9 @@ nav {
 .logo {
 	margin-top: 23px;
 }
+.logo img {
+	width: 78px;
+}
 nav ul {
 	list-style: none;
 	margin-top:20px;
@@ -41,5 +44,43 @@ nav ul {
 nav li {
 	display: inline-block;
 	margin-left: 20px;
+	color: rgba(255, 255, 255, 0.69);
 }
 
+header {
+	padding-top: 120px;
+	height: 642px;
+	background-image: url("../images/header_bg.gif");
+}
+.info {
+	width: 520px;
+}
+.info img {
+	width: 175px;
+}
+h1 {
+	font-family: 'Raleway', sans-serif;
+	font-size: 34px;
+	margin-top: 20px;
+}
+.info p {
+	font-family: 'Raleway', sans-serif;
+	font-size: 15px;
+	color: rgba(255, 255, 255, 0.8);
+	margin-top: 20px;
+}
+.info hr {
+	width: 64px;
+	size: 2px;
+	margin-top: 20px;
+	border: solid 1px rgb(255, 255, 255);
+}
+.info button {
+	font-size: 15px;
+	width: 135px;
+	height: 42px;
+	margin-top: 20px;
+	background: 0;
+	color: rgb(255, 255, 255);
+	border: solid 2px rgba(255, 255, 255, 0.61);
+}
