--- a/css/main_style.css
+++ b/css/main_style.css
@@ -14,6 +14,7 @@
 	font-family: 'Open Sans', sans-serif;;
 	font-size: 14px;
 	color: rgba(255, 255, 255);
+	background-color: #ffffff;
 }
 .left {
 	margin-left: 150px;
@@ -130,4 +131,28 @@ h1 {
 	border-radius: 0 0 3px  3px;
 	background-color: #ff9b51;
 	color: #ffffff;
+}
+
+/*BRAND BAR*/
+.brandBar {
+	height: 105px;
+	box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.38);
+}
+.brandInfo {
+	width: 370px;
+}
+h2 {
+	font-size: 20px;
+	text-transform: bold;
+	color: #828282;
+	margin-top:10px;
+}
+.brandInfo p {
+	color: #86878B;
+	margin-top:10px;
+}
+.brandIcons i {
+	height: 40px;
+	color: #cccccc;
+	margin-top:10px;
 }
