--- a/css/main_style.css
+++ b/css/main_style.css
@@ -13,7 +13,7 @@
 	position: relative;
 	font-family: 'Open Sans', sans-serif;;
 	font-size: 14px;
-	color: rgba(255, 255, 255);
+	color: #ffffff;
 	background-color: #ffffff;
 }
 .left {
@@ -24,7 +24,13 @@
 	margin-right: 148px;
 	float: right;
 }
-
+ul {
+	list-style: none;
+}
+hr {
+	width: 64px;
+	size: 2px;
+}
 /*NAV BAR*/
 nav {
 	height: 70px;
@@ -39,7 +45,6 @@ nav {
 	width: 78px;
 }
 nav ul {
-	list-style: none;
 	margin-top:20px;
 }
 nav li {
@@ -72,10 +77,8 @@ h1 {
 	margin-top: 20px;
 }
 .info hr {
-	width: 64px;
-	size: 2px;
 	margin-top: 20px;
-	border: solid 1px rgb(255, 255, 255);
+	border: solid 1px #ffffff;
 }
 .info button {
 	font-size: 15px;
@@ -110,7 +113,6 @@ h1 {
 }
 
 .signup ul {
-	list-style: none;
 	padding: 0 20px;
 }
 .signup li {
@@ -143,7 +145,7 @@ h1 {
 }
 h2 {
 	font-size: 20px;
-	text-transform: bold;
+	font-width: bold;
 	color: #828282;
 	margin-top:10px;
 }
@@ -155,4 +157,80 @@ h2 {
 	height: 40px;
 	color: #cccccc;
 	margin-top:10px;
+}
+
+
+/*FEATURES*/
+.feature1 {
+	height: 595px;
+	padding-top: 40px;
+	background-color: #f5f5f5;
+}
+.feature1Info {
+	width: 390px;
+	padding-top: 10px;
+}
+.feature1Info ul {
+	margin-left: 0;
+	width: 112px;
+	padding-inline-start: 0;
+	margin-right: 0;
+}
+.feature1Info li {
+	width: 112px;
+	height: 112px;
+	padding-top: 40px;
+	font-size: 15px;
+	font-weight: bold;
+	text-align: center;
+	background-color: #333333;
+	border: solid 1px #a5a5a5;
+}
+.feature1Info li a {
+	text-decoration: none;
+	color: #ffffff;
+}
+
+.fDescription {
+	width: 550px;
+	padding-top: 10px;
+	margin-left: 140px;
+}
+.fDescription p {
+	color: #86878B;
+	margin-top:10px;
+}
+.fDescription button {
+	width: 119px;
+	height: 44px;
+	margin-top: 40px;
+	border: 0;
+	border-radius: 3px;
+	background-color: #ff8b38;
+	color: #ffffff;
+}
+.feature1Image {
+	width: 300px;
+	margin-top: 40px;
+}
+
+.feature2 {
+	height: 595px;
+	padding-top: 40px;
+}
+.feature2Info {
+	width: 400px;
+}
+.feature2Info p {
+	color: #86878B;
+	margin-top:10px;
+}
+
+h3 {
+	color: #212121;
+}
+
+.feature2Info hr {
+	margin-top: 20px;
+	border: solid 1px #ffd1af;
 }
