--- a/styles/main.css
+++ b/styles/main.css
@@ -1,16 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,700');
 
-* {
+/** {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-}
-ul {
+}*/
+/*ul {
 	list-style: none;
 }
 a {
 	text-decoration: none;
-}
+}*/
 
 .container, input, button {
 	font-family: 'Open Sans', sans-serif;
