--- a/styles/main.css
+++ b/styles/main.css
@@ -1,84 +1,101 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,700');
 
-/** {
-	margin: 0;
-	padding: 0;
+* {
 	box-sizing: border-box;
-}*/
+}
+body {
+	margin: 0;
+}
 /*ul {
 	list-style: none;
-}
+}*/
 a {
 	text-decoration: none;
-}*/
+}
 
 .container, input, button {
 	font-family: 'Open Sans', sans-serif;
-	font-size: 14px;
+	font-size: 1.4vw;
 	color: #ffffff;
 }
 .container {
 	margin: 0 auto;
-	width: 1400px;
+	width: 99vw;
 	position: relative;
 	background-color: #ffffff;
 }
-.left {
+.content {
+	width: 77.9vw;
+	height: 100%;
+	margin: 0 auto;
+	display: flex;
+	justify-content: space-between;
+}
+/*.left {
 	margin-left: 150px;
 	float: left;
 }
 .right {
 	margin-right: 149px;
 	float: right;
-}
+}*/
 h1 {
 	font-family: 'Raleway', sans-serif;
-	font-size: 34px;
-	line-height: 1.250;
-	letter-spacing: 1.2px;
-	margin-top: 21px;
-	margin-left: -2px;
+    font-size: 2.4vw;
+    line-height: 1.250;
+    letter-spacing: 0.09vw;
+    margin-top: 1.32vw;
+    margin-left: -0.1vw;
 }
 h2 {
-	font-size: 20px;
+	font-size: 2vw;
 	font-weight: 700;
 	color: #515151;
 }
 h3 {
-	font-size: 14px;
+	font-size: 0.9vw;
 	color: #212121;
-	margin-top: 34px;
-	margin-left: 69px;
+	margin-top: 3.4vw;
+	margin-left: 6.9vw;
 }
-hr {
-	width: 64px;
-	size: 2px;
+.title_line {
+	width: 4.7vw;
+	height: 2px;
+	background-color: #757575;
+	margin-top: 2.4vw;
 }
 
 
 /*NAV BAR*/
 nav {
-	height: 70px;
+	height: 4.95vw;
 	width: 100%;
 	background-color: #000000;
 	position: absolute; 
 }
 .logo {
-	margin-top: 21px;
+	height: 100%;
+	margin-top: 1.5vw;
 }
 .logo img {
-	width: 79px;
+	width: 5.6vw;
 }
 nav ul {
-	margin-top:25px;
+	padding: 0;
+	margin: 0;
 }
 nav li {
 	display: inline-block;
-	margin-left: 46px;
-	
+	line-height: 4vw;
+	margin-left: 3.13vw;
+	height: 100%;
 }
 nav li a {
+	font-size: 1.0vw;
 	color: rgba(255, 255, 255, 0.69);
+	height: 100%;
+	display: flex; /*max area*/
+	align-items: center; /*vertical align */
 }
 nav li a:hover {
 	color: rgba(255, 255, 255);
@@ -86,94 +103,105 @@ nav li a:hover {
 
 /*HEADER*/
 header {
-	padding-top: 120px;
-	height: 711px;
+	padding-top: 12vw;
+	/*height: 71.1vw;*/
 	background-image: url("../images/header_bg.gif");
+	background-size: cover;
 }
 .info {
-	width: 520px;
+	width: 37vw;
+	padding-top: 0.7vw;
+	padding-bottom: 9.8vw;
 }
-.info div {
-	margin-top: 60px;
-}
+
 .info img {
-	width: 175px;
+	width: 12.4vw;
 }
 .info p {
 	font-family: 'Raleway', sans-serif;
-	font-size: 16px;
-	line-height: 1.438;
-	letter-spacing: -0.1px;
+	font-size: 1vw;
+    line-height: 1.638;
+    letter-spacing: 0.053vw;
 	color: rgba(255, 255, 255, 0.8);
-	margin-top: 35px;
+	margin-top: 2.5vw;
+	padding-right: 1.2vw;
 }
 .info hr {
-	margin-top: 33px;
+	margin-top: 3.3vw;
 	border: solid 1px #ffffff;
 	margin-left: 2px;
 }
 .info button {
-	font-size: 15px;
-	letter-spacing: 0.9px;
-	width: 135px;
-	height: 42px;
-	margin-top: 41px;
-	margin-left: 1px;
-	padding-top: 1px;
-	padding-left: 1px;
+	font-size: 1vw;
+    letter-spacing: 0.05vw;
+    width: 9.5vw;
+    height: 3vw;
+    margin-top: 1.8vw;
+    margin-left: 0.1vw;
+    padding-top: 0.2vw;
+    padding-left: 0.6vw;
 	background: 0;  /*del default background-color*/
 	color: rgb(255, 255, 255);
 	border: solid 2px rgba(255, 255, 255, 0.61);
 }
 
-	/*form*/
-.signup {
-	width: 360px;
-	height: 361px;
-	margin-top: 90px;
+	/*info form*/
+.sign_up {
+	width: 25.4vw;
+    height: 25.5vw;
+    margin-top: 2.8vw;
+    margin-right: 0.2vw;
 	background-color: #ffffff;
-	border-radius: 4px;
+	border-radius: 3px;
 }
-.signup p {
-	height: 54px;
-	padding-top: 13px;
-	padding-left: 52px; /*text was not in the center*/
-	/*text-align: center;*/ 
-	font-size: 20px;
+.sign_up p {
+	height: 3.84vw;
+    margin: 0;
+    padding-top: 0.9vw;
+    padding-left: 3.6vw; /*text was not in the center*/
+	font-size: 1.4vw;
 	font-weight: bold;
+	letter-spacing: 0.01vw;
 	background-color: #f5f5f5;
 	color: #333333;
 	border-radius: 3px 3px 0 0;
 }
-.signup span {
+.sign_up span {
 	text-transform: uppercase;
 	color: #fda362;
 }
-.signup ul {
-	padding: 0 0 0 51px;
+.sign_up ul {
+	padding: 0 2.6vw;
+	margin: 0;
 }
-.signup li {
-	margin-top: 47px;
-}
-.signup input {
-	color: #bdbdbd;
-	width: 100%; /*lines in input for all width*/
-	border: 0; /*del style for input*/
+.sign_up li {
+	margin-top: 2.2vw;
 	border-bottom: solid 1px #f7f7f7;
 }
-.signup button {
-	font-size: 15px;
-	letter-spacing: 0.3px;
+.sign_up li:last-child {
+	margin-top: 3.6vw;
+}
+.sign_up input {
+	font-size: 1.0vw;
+	color: #bdbdbd;
+	width: 100%; /*lines in input for all width*/
+	padding-left: 0.9vw;
+	padding-bottom: 0.4vw;
+	border: 0; /*del style for input*/
+	
+}
+.sign_up button {
+	font-size: 1.1vw;
 	width: 100%;
-	height: 53px;
-	margin-top: 53px;
+	height: 3.8vw;
+    margin-top: 3.2vw;
 	border: 0;
 	border-radius: 0 0 3px 3px;
 	background-color: #ff9b51;
 }
 
 /*BRAND BAR*/
-.brandBar {
+/*.brandBar {
 	height: 105px;
 	box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.38);
 }
@@ -196,11 +224,11 @@ header {
 	color: #cccccc;
 	margin-left: 55px;
 }
-
+*/
 
 /*FEATURES*/
 	/*feature1*/
-.feature1 {
+/*.feature1 {
 	height: 595px;
 	padding-top: 146px;
 	background-color: #f5f5f5;
@@ -269,9 +297,9 @@ header {
 	width: 300px;
 	margin-top: 25px;
 	margin-right: 168px;
-}
+}*/
 	/*feature2*/
-.feature2 {
+/*.feature2 {
 	height: 595px;
 	margin-left: -34px;
 	padding-top: 111px;
@@ -311,5 +339,5 @@ header {
 .titleItem p {
 	margin-top: 5px;
     margin-left: 71px;
-}
+}*/
 
